<resources>
    <string name="app_name">ZerOil</string>
    <string name="oil_recycling_app">The only app for Oil Recycling</string>
    <string name="todo">The only app for Oil Recycling </string>
    <string name="trial">Trial</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textview">TextView</string>
    <string name="title_activity_side_navigation">SideNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bull_s_rent">Bull\'s Rent</string>
    <string name="donate_oil_app">Donate oil app</string>
    <string name="title">ZerOil </string>
    <string name="oil_donation_app">Stop Wasting Your Oil ! Recycle Now !</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
        <string name="google_maps_api_key">AIzaSyB6NZyr_JxOSUdExObq4-9IE8ja-3ZWyjE</string>
    <string name="drive_now">Drive Now</string>
    <string name="location_name">Location Name</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="longi">longi</string>
    <string name="lat">lat</string>
    <string name="user_full_name">User Full Name</string>
    <string name="user_name">user name</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="userprof">Username</string>
    <string name="update">UPDATE</string>
    <string name="string_todo" />
    <string name="basic_information_on_handling_used_oil_at_home">Basic Information on Handling Used Oil at Home</string>
    <string name="sample_page_title">Basic Information on Handling Used Oil at Home</string>
    <string name="sample_page_content">       Recycling and reusing used motor oil is preferable to disposal and can provide great environmental benefits. Recycled used motor oil can be re-refined into new oil, processed into fuel oils, and used as raw materials for the petroleum industry.

            Looking for a Place to Recycle your Used Oil?
            Use the below resources to find recycling locations near you:

            American Petroleum Institute Used Motor Oil Collection and Recycling Site EXIT
            Compliance Assistance Center for Auto Repair EXIT
            Environmental Compliance for Auto Recyclers EXIT
            Earth 911 Recycling Search Tool EXIT

            Used oils such as engine lubrication oil, hydraulic fluids, and gear oils used in cars, bikes, or lawnmowers can pollute the environment if they are not recycled or disposed of properly. Used oil must be managed properly by local waste management authorities or automotive repair shops to prevent contaminating the environment. Used oil filters pose similar waste concerns. If properly drained, they can be safely recycled or disposed.

            Some of the many reasons to reuse and recycle used oil include:

            - Recycling used oil keeps it from polluting soil and water.
            - Motor oil does not wear out—it just gets dirty—so recycling it saves a valuable resource.
            - Less energy is required to produce a gallon of re-refined base stock than a base stock from crude oil.
            - One gallon of used motor oil provides the same 2.5 quarts of lubricating oil as 42 gallons of crude oil.</string>

</resources>